<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_border"
    android:padding="2dp"
    tools:context="com.example.sayan.restaurant.UserProfile">


        <Button
            android:id="@+id/picture_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/image_taker_text_id"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/drawable_dialog_button"
            android:padding="15dp"
            android:text="@string/open_camera"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/gallery_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/picture_id"
            android:layout_alignBottom="@+id/picture_id"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/drawable_dialog_button"
            android:padding="15dp"
            android:text="@string/open_gallery"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/image_taker_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="top"
            android:layout_marginTop="41dp"
            android:gravity="center_horizontal"
            android:text="@string/select_options"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>